# Agent-Capsule

./: .editorconfig  .gitignore  PRD.md  README.md  agent-capture-master.md  agent.md  design.md  script.md
agent-capsule-console/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
agent-capsule-website/: README.md  components.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
ci/: README.md  check-foundation.sh  check-phase1.sh  check-phase10.sh  check-phase11.sh  check-phase12.sh  check-phase13.sh  check-phase14.sh  check-phase15.sh  check-phase2.sh  check-phase3.sh  check-phase4.sh  check-phase5.sh  check-phase6.sh  check-phase7.sh  check-phase8.sh  check-phase9.sh  python-env.sh  validate-json-file.py  validate-phase1.py  validate-phase13.py
cli/: README.md  pyproject.toml
cli/src/agent_capsule_cli/: main.py
cli/tests/: test_cli.py
docs/: ci-cd.md  coding-standards.md  confidential-demo.md  conformance.md  development.md  hardware-requirements.md  hashing-redaction.md  multi-language-sdk-beta.md  phase-0-review.md  phase-1-review.md  phase-10-review.md  phase-11-review.md  phase-12-review.md  phase-13-review.md  phase-14-review.md  phase-15-review.md  phase-2-review.md  phase-3-review.md  (+14 more)
sdk-python/: README.md  pyproject.toml
sdk-python/src/agent_capsule/: __init__.py  capsule.py  classification.py  guard.py  hashing.py  replay.py  safe_trace.py  trace_store.py
sdk-python/tests/: test_guard_mode.py  test_observe.py  test_replay.py  test_safe_trace.py  test_trace_store.py
(+104 files in other folders)
