[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-capsule"
version = "0.1.0"
description = "Private-by-default instrumentation SDK for AI agents."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
